--- a/force-app/main/default/classes/AccountsSelector.cls
+++ b/force-app/main/default/classes/AccountsSelector.cls
@@ -1,4 +1,5 @@
 public class AccountsSelector extends SObjectSelectorImpl {
+    //deploy
     public override SObjectType getSObjectType() {
         return Account.getSObjectType();
     }
